tdf#106857: use SfxInt32Item for ATTR_SNAPLINE

and avoid crash with this bt:
3  0x00007ffff7449ef2 in __GI___assert_fail (assertion=assertion@entry=0x7ffff1f0cdd0 "dynamic_cast<const CntUInt32Item*>(&rItem) != nullptr",
    file=file@entry=0x7ffff1f0cce8 "/home/julien/lo/libreoffice/svl/source/items/cintitem.cxx", line=line@entry=232,
    function=function@entry=0x7ffff1f0d0a0 <CntUInt32Item::operator==(SfxPoolItem const&) const::__PRETTY_FUNCTION__> "virtual bool CntUInt32Item::operator==(const SfxPoolItem&) const") at assert.c:101
4  0x00007ffff1dd7ceb in CntUInt32Item::operator== (this=0x7fffffff2380, rItem=...) at /home/julien/lo/libreoffice/svl/source/items/cintitem.cxx:232
5  0x00007ffff1e0136e in SfxItemSet::Put (this=0x7fffffff2490, rItem=..., nWhich=<optimized out>) at /home/julien/lo/libreoffice/svl/source/items/itemset.cxx:510
6  0x00007fffc68c7ba1 in SfxItemSet::Put (this=this@entry=0x7fffffff2490, rItem=...) at /home/julien/lo/libreoffice/include/svl/itemset.hxx:131
7  0x00007fffc68d9052 in SdSnapLineDlg::GetAttr (this=0x55555bd802c0, rOutAttrs=SfxItemSet of pool 0x55555779b070 with parent 0x0 and Which ranges: [(28282, 28284)] = {...})
    at /home/julien/lo/libreoffice/sd/source/ui/dlg/dlgsnap.cxx:159

Change-Id: Iebaf8d773a532f64c224c0371382132aa4a8d2eb
Reviewed-on: https://gerrit.libreoffice.org/35885
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit e1ff3782cc0bef951e7e5f0166c2b2395eaee26b)